# castle

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TODO.md  castle.code-workspace  castle.yaml  install.sh  pyproject.toml  pyrightconfig.json  recommendations.md  ruff.toml
.github/workflows/: no-claude.yml
app/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: index.css
app/src/components/: AddComponent.tsx  AddDeployment.tsx  AddProgramForm.tsx  AgentTerminal.tsx  AssistantDock.tsx  BehaviorBadge.tsx  CommandPalette.tsx  ComponentCard.tsx  ComponentEditor.tsx  ComponentFields.tsx  ComponentGrid.tsx  ComponentTable.tsx  ConfirmModal.tsx  ConvergePanel.tsx  DeploymentEditor.tsx  DeploymentFields.tsx  GatewayPanel.tsx  GatewaySettings.tsx  HostSwitcher.tsx  JobCard.tsx  JobSection.tsx  KindBadge.tsx  Layout.tsx  LogViewer.tsx  MeshPanel.tsx  MonorepoBanner.tsx  NodeBar.tsx  PageHeader.tsx  ProgramActions.tsx  ProgramCard.tsx  ProgramList.tsx  ProgramTable.tsx  RoleBadge.tsx  ScheduledSection.tsx  SecretsEditor.tsx  SectionHeader.tsx  ServiceCard.tsx  ServiceSection.tsx  SortHeader.tsx  StackBadge.tsx  (+2 more)
app/src/lib/: labels.ts
app/src/pages/: ComponentDetail.tsx  ComponentRedirect.tsx  ConfigEditor.tsx  Dashboard.tsx  GatewayPage.tsx  GraphPage.tsx  MeshPage.tsx  NodeDetail.tsx  Overview.tsx  ProgramDetail.tsx  ProgramRedirect.tsx  Programs.tsx  Scheduled.tsx  ScheduledDetail.tsx  SecretsPage.tsx  ServiceDetail.tsx  Services.tsx  Stacks.tsx  SystemMap.tsx  ToolDetail.tsx  Tools.tsx
app/src/router/: routes.tsx
app/src/types/: index.ts
backup-collect/: pyproject.toml
bootstrap/deployments/: castle-api.yaml  castle.yaml
bootstrap/deployments/services/: castle-api.yaml  castle-gateway.yaml
bootstrap/programs/: castle-api.yaml  castle.yaml
browser/: pyproject.toml
castle-api/: CLAUDE.md  pyproject.toml
castle-api/src/castle_api/: __init__.py  agent_registry.py  agent_sessions.py  agents.py  config.py  config_editor.py  deploy_routes.py  events.py  graph.py  health.py  llm.py  logs.py  main.py  mdns.py  mesh.py  mesh_gateway.py  mesh_wire.py  models.py  mqtt_client.py  nats_client.py  nodes.py  programs.py  pty_session.py  repos.py  routes.py  secrets.py  services.py  stream.py  tools.py
castle-api/tests/: conftest.py  test_config_delete.py  test_deployment_roundtrip.py  test_exposure_derivation.py  test_graph_repos.py  test_health.py  test_kind_twins.py  test_mesh.py  test_mesh_config_api.py  test_mesh_wire.py  test_mqtt.py  test_nats_client.py  test_nats_integration.py  test_nodes.py  test_programs_commands.py  test_programs_git.py  test_secrets_overrides.py  test_stacks_api.py  test_tool_schema_api.py  test_tools.py
cli/: pyproject.toml
cli/src/castle_cli/: __init__.py  config.py  main.py  manifest.py
cli/src/castle_cli/commands/: add.py  apply.py  clone.py  create.py  delete.py  deploy.py  deploy_create.py  dev.py  doctor.py  expose.py  gateway.py  graph.py  info.py  list_cmd.py  logs.py  mesh.py  run_cmd.py  service.py  stack.py  sync.py  tls.py  tool.py
cli/src/castle_cli/templates/: scaffold.py
cli/tests/: conftest.py  test_add.py  test_config.py  test_create.py  test_delete.py  test_doctor.py  test_gateway.py  test_info.py  test_list.py  test_manifest.py  test_mesh.py  test_service.py  test_tool.py
components/android-backup/: pyproject.toml
components/devbox-connect/: README.md
components/mbox2eml/: pyproject.toml
components/md2pdf/: pyproject.toml
components/schedule/: pyproject.toml
core/: pyproject.toml
core/src/castle_core/: __init__.py  adopt.py  audit.py  config.py  deploy.py  git.py  lifecycle.py  manifest.py  registry.py  relations.py  secret_backends.py  stack_status.py  stacks.py  tls.py  tool_schema.py  toolchains.py
core/src/castle_core/generators/: __init__.py  caddyfile.py  dns.py  systemd.py  tunnel.py
core/tests/: conftest.py  test_apply.py  test_audit.py  test_caddyfile.py  test_caddyfile_remote.py  test_config.py  test_deploy_prune.py  test_deploy_run_cmd.py  test_deploy_secret_env.py  test_dns.py  test_fleet_role.py  test_git.py  test_kind_identity.py  test_lifecycle.py  test_manifest.py  test_relations.py  test_resolution.py  test_secret_backends.py  test_systemd.py  test_tls.py  test_tool_schema.py  test_toolchains.py  test_tunnel.py  test_units.py
dashboard/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard-api/: CLAUDE.md  pyproject.toml
dashboard-api/src/dashboard_api/: __init__.py  config.py  config_editor.py  events.py  health.py  logs.py  main.py  models.py  routes.py  secrets.py  services.py  stream.py  tools.py
dashboard-api/tests/: conftest.py  test_health.py  test_tools.py
dashboard/src/components/: ComponentCard.tsx  ComponentEditor.tsx  ComponentFields.tsx  ComponentTable.tsx  HealthBadge.tsx  RoleBadge.tsx  ToolCard.tsx
dashboard/src/lib/: labels.ts
dashboard/src/pages/: ConfigEditor.tsx  (+2 more)
devbox-connect/: pyproject.toml  tunnels.example.yaml
devbox-connect/service/: install-service.ps1  run-manual.bat
devbox-connect/src/devbox_connect/: config.py
docs/: component-registry.md  design.md  developing-castle.md  dns-and-tls.md  findings-lakehouse.md  fleet-mesh-plan.md  python-tools.md  registry.md  relationships.md  tcp-exposure.md  tunnel-setup.md  web-apis.md  web-frontends.md
docs/stacks/: hugo.md  python-cli.md  python-fastapi.md  react-vite.md  supabase.md
docs/working/: discussion.md
event-bus/: CLAUDE.md  pyproject.toml
event-bus/src/event_bus/: __init__.py  bus.py  config.py  main.py
event-bus/tests/: conftest.py  test_bus.py  test_health.py
html2text/: pyproject.toml
pdf-extractor/: pyproject.toml
pdf2md/: pyproject.toml
search/: pyproject.toml
tools/: README.md
tools/android/: pyproject.toml
tools/browser/: pyproject.toml
tools/document/: pyproject.toml
tools/document/src/document/: mbox2eml.md  mbox2eml.py
tools/gpt/: pyproject.toml
tools/mdscraper/: pyproject.toml
tools/search/: pyproject.toml
tools/system/: pyproject.toml
working/: decisions.md  schema.py  validation-log.md
(+22 files in other folders)
