[project]
name = "browser"
version = "0.1.0"
description = "Browser automation tool powered by browser-use"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "browser-use>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[project.scripts]
browser = "browser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser"]
