[project]
name = "castle-core"
version = "0.1.0"
description = "Castle platform core library - manifest models, config, and generators"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castle_core"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pyyaml>=6.0.0",
]

[tool.ruff.lint.isort]
known-first-party = ["castle_core"]
