[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Extract content and metadata from PDF files"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.11",
]

[project.scripts]
pdf-extractor = "pdf_extractor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_extractor"]
