[project]
name = "search"
version = "0.1.0"
description = "Manage searchable collections of files"
requires-python = ">=3.11"
dependencies = [
    "toml>=0.10.2",
]

[project.scripts]
search = "search.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search"]
