[project]
name = "android-backup"
version = "0.1.0"
description = "Backup Android device using ADB"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
android-backup = "android_backup.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_backup"]
