[project]
name = "mbox2eml"
version = "0.1.0"
description = "Convert MBOX mailbox files to individual .eml files"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mbox2eml = "mbox2eml.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbox2eml"]
