[project]
name = "schedule"
version = "0.1.0"
description = "Systemd timer and service management tool"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
schedule = "schedule.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schedule"]
