[project]
name = "castle-android"
version = "0.1.0"
description = "Castle Android tools"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
android-backup = "android.android_backup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android"]
