[project]
name = "castle-browser"
version = "0.1.0"
description = "Castle browser automation tools"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "browser-use>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[project.scripts]
browser = "browser.browser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser"]
