[project]
name = "castle-mdscraper"
version = "0.1.0"
description = "Castle markdown scraping tools"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mdscraper = "mdscraper.mdscraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdscraper"]
