[project]
name = "castle-search"
version = "0.1.0"
description = "Castle search and indexing tools"
requires-python = ">=3.11"
dependencies = [
    "toml>=0.10.2",
    "pymupdf>=1.24.11",
]

[project.scripts]
search = "search.search:main"
pdf-extractor = "search.pdf_extractor:main"
docx-extractor = "search.docx_extractor:main"
text-extractor = "search.text_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search"]
