[project]
name = "castle-system"
version = "0.1.0"
description = "Castle system administration tools"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
backup-collect = "system.backup_collect:main"
schedule = "system.schedule:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/system"]
